--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "slick-slider": "^1.8.2",
     "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1",
