--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ethereum NFT minting dapp is a quick and easy way to connect your smart contract and start minting NFTs.",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
     "custom-react-accordion": "^1.0.4",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
