--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Ethereum_NFT minting_Dapps",
-  "homepage": "https://bboyz.ioad/",
+  "homepage": "https://badboyz.io/",
   "version": "1.0.0",
   "description": "Ethereum NFT minting dapp is a quick and easy way to connect your smart contract and start minting NFTs.",
   "private": true,
