--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "animate.css": "^4.1.1",
     "custom-react-accordion": "^1.0.4",
     "jquery": "^3.6.0",
+    "jquery-lazy": "^1.7.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
